# pong-dqn-rl

./: .gitignore  Makefile  README.md  config.ini  pyproject.toml
models/pong-cnn-test-v0/: model.pkl  parameters.json
models/pong-cnn-test-v0-small/: model.pkl  parameters.json  training_logs.txt
models/pong-cnn-test-v0-test/: parameters.json  training_logs.txt
models/pong-cnn-test-v1/: model.pkl  parameters.json
models/pong-cnn-test-v1-small/: model.pkl  parameters.json
pong_dqn_rl/: dueling_qn.py  rl_agent.py  training.py
tests/: test_pong_dqn_rl.py
