[tool.poetry]
name = "pong-dqn-rl"
version = "0.1.0"
description = ""
authors = ["= <=>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.24.0"
torch = "^1.11.0"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
