[tool.poetry]
name = "pong-dqn-rl"
version = "0.1.0"
description = ""
authors = ["= <=>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.24.0"
torch = "^1.11.0"
opencv-python = "^4.5.5"
black = "^22.3.0"
mypy = "^0.960"
isort = "^5.10.1"
configparser = "^5.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
